src/instructions/snapshots/osrm_extensions__instructions__banner_instruction__tests__banner_with_next_step.snap
---
source: src/instructions/banner_instruction.rs
expression: factory.build()
---
[
  {
    "distanceAlongGeometry": 50.0,
    "primary": {
      "text": "Main Street",
      "type": "turn",
      "modifier": "right",
      "components": [
        {
          "text": "Main Street",
          "type": "text"
        }
      ]
    }
  }
]
